Bug 1088559 - Also dispatch NotifyAsyncPanZoomStarted/NotifyAsyncPanZoomStopped to nsDocShell's child. r=roc